v24004 - by JN on 26/03/2024 - Adding tests and adjusts