@@ -11,6 +11,11 @@ java {
 	sourceCompatibility = '21'
 }
 
+test{
+	//JVM options
+	jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage", "-Xshare:off")
+}
+
 repositories {
 	mavenCentral()
 }
@@ -19,11 +24,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+	implementation 'org.webjars:swagger-ui:4.18.1'
+	implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.assertj:assertj-core:3.24.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation 'com.callibrity.logging:log-tracker:1.0.1'
 }
 
 tasks.named('test') {
